deployment/template/serv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
