deployment/template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - myserver.com
      secretName: myserver-tls
  rules:
    - host: myserver.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: my-server
                port:
                  number: 8080
